2014-03-10  Zoltan Horvath  <zoltan@webkit.org>

        Let the user define the full address of the performance-site-server for uploading results
        https://bugs.webkit.org/show_bug.cgi?id=129819

        Reviewed by Ryosuke Niwa.

        Currently perftestsrunner.py assumes that the server uses https protocol all the time, which
        can be confusing. It's more straightforward, if you need to define explicitly the server's full
        address along with the protocol, when you're using this parameter. I added HTTPS as the default
        protocol for now, in order to avoid breaking the perf bots.

        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (_upload_json):
        * Scripts/webkitpy/performance_tests/perftestsrunner_unittest.py:
        (MainTest.test_upload_json):

2014-03-10  Brent Fulgham  <bfulgham@apple.com>

        [Win] Pass environment to Pre-Build, Pre-Link, and Post-Build Stages.
        https://bugs.webkit.org/show_bug.cgi?id=130023

        Reviewed by Dean Jackson.

        * DumpRenderTree/DumpRenderTree.vcxproj/DumpRenderTree/DumpRenderTreeLauncher.vcxproj: Add missing
        /SAFESEH flag to DLL launcher process.

2014-03-09  Martin Robinson  <mrobinson@igalia.com>

        RunGtkWebKitGObjectDOMBindingsAPIBreakTests should be added to the BuildAndTestFactory not the TestFactory
        https://bugs.webkit.org/show_bug.cgi?id=129980

        Reviewed by Carlos Garcia Campos.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg: Add RunGtkWebKitGObjectDOMBindingsAPIBreakTests to the correct factory.

2014-03-09  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Remove the WebView source-mode WebKit1 test
        https://bugs.webkit.org/show_bug.cgi?id=129976

        Reviewed by Carlos Garcia Campos.

        * TestWebKitAPI/Tests/WebKitGtk/testwebview.c: Remove the source-mode test.

2014-03-08  Martin Robinson  <mrobinson@igalia.com>
