@@ -95,6 +95,11 @@ static wstring applePathFromRegistry(const wstring& key, const wstring& value)
     return path;
 }
 
+static wstring appleApplicationSupportDirectory()
+{
+    return applePathFromRegistry(L"SOFTWARE\\Apple Inc.\\Apple Application Support", L"InstallDir");
+}
+
 static wstring copyEnvironmentVariable(const wstring& variable)
 {
     DWORD length = ::GetEnvironmentVariableW(variable.c_str(), 0, 0);
@@ -146,11 +151,7 @@ static bool modifyPath(const wstring& programName)
 
 #else
 
-#if defined(_M_X64)
-    static const wstring pathPrefix = L"C:\\Program Files\\Common Files\\Apple\\Apple Application Support";
-#else
-    static const wstring pathPrefix = L"C:\\Program Files (x86)\\Common Files\\Apple\\Apple Application Support";
-#endif
+    const wstring& pathPrefix = appleApplicationSupportDirectory();
 
     if (!directoryExists(pathPrefix)) {
         fatalError(programName, L"Failed to determine path to AAS directory.");
